homework2-kubernetes/haproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: haproxy
  namespace: cse644

spec:
  replicas: 1

  selector:
    matchLabels:
      app: haproxy

  template:
    metadata:
      labels:
        app: haproxy

    spec:
      containers:
      - name: haproxy
        image: haproxy:3.1-alpine

        ports:
        - containerPort: 8080

        volumeMounts:
        - name: haproxy-config
          mountPath: /usr/local/etc/haproxy/haproxy.cfg
          subPath: haproxy.cfg

      volumes:
      - name: haproxy-config
        configMap:
          name: haproxy-config
