homework2-kubernetes/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-nginx
  namespace: cse644
spec:
  replicas: 3
  selector:
    matchLabels:
      app: custom-nginx
  template:
    metadata:
      labels:
        app: custom-nginx
    spec:
      containers:
      - name: custom-nginx
        image: rodraemonalvero/cse644-custom-nginx:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
