homework2-kubernetes/haproxy-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: haproxy-service
  namespace: cse644

spec:
  type: ClusterIP

  selector:
    app: haproxy

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
