homework2-kubernetes/nginx-loadbalancer.yaml
apiVersion: v1
kind: Service

metadata:
  name: custom-nginx-loadbalancer
  namespace: cse644

spec:
  type: LoadBalancer

  selector:
    app: custom-nginx

  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
