homework2-kubernetes/nginx-nodeport.yaml
apiVersion: v1
kind: Service

metadata:
  name: custom-nginx-nodeport
  namespace: cse644

spec:
  type: NodePort

  selector:
    app: custom-nginx

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
