homework2-kubernetes/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-nginx-service
  namespace: cse644

spec:
  type: ClusterIP

  selector:
    app: custom-nginx

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
